<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_color"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/pets"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_app"
            android:textAlignment="center"
            android:textColor="@color/colorIcons"
            android:layout_margin="30dp"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slogan_app"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLight"
            android:layout_marginBottom="60dp"
            android:textSize="20sp"
            android:textStyle="italic|bold"/>

        <Button
            android:id="@+id/btnGoToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btn_have_an_account"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorPrimaryText" />

        <Button
            android:id="@+id/btnGoToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/btn_register_now" />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>