<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.UpdateProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:elevation="4dp"
            app:shape_arc_cropDirection="outside"
            app:shape_arc_height="20dp"
            app:shape_arc_position="bottom">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textViewNameBookingDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MI PERFIL"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

        </com.github.florent37.shapeofview.shapes.ArcView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="80dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/user" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputNameUpdateProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputName"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/email" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEmailUpdateProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputEmail"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/password"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputPasswordUpdateProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputPassword"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/gender"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonMaleUpdateProfile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rbtnMale"
                    android:checked="true">

                </com.google.android.material.radiobutton.MaterialRadioButton>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonFemaleUpdateProfile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rbtnFemale">

                </com.google.android.material.radiobutton.MaterialRadioButton>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePickerUpdateProfile"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:ccp_defaultNameCode="EC"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputNumberUpdateProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputPhoneNumber"
                    android:inputType="phone">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center|top"
        app:civ_border_width="4dp"
        android:layout_marginTop="110dp"
        app:civ_border_color="#F0F0F0"
        android:src="@drawable/profile"
        />


    <Button
        android:id="@+id/btnUpdateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="EDITAR | ACTUALIZAR PERFIL"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:textColor="@android:color/white" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>