<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"

    >
<!--    SE DEFINE EL DISEÑO QUE TENDRA CADA ELEMENTO DE LA LISTA-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/namePet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toRightOf="@+id/imageView_pet"
                android:text="Name"
                android:textColor="@color/colorPrimaryText"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView_pet"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:srcCompat="@drawable/ic_footprint" />


        </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/lbl_breedPet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/lbl_breedPet"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />


                    <TextView
                        android:id="@+id/breedPet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="Breed"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/lbl_genderPet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/lbl_genderPet"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/genderPet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="Gender"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/lbl_descriptionPet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/lbl_descriptionPet"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/descriptionPet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="Description"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnEdit"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:drawableLeft="@drawable/edit"
                        android:text="@string/btn_edit"
                        android:textColor="@color/colorIndigo900"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btnDelete"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="5dp"
                        android:drawableLeft="@drawable/delete"
                        android:drawablePadding="6dp"
                        android:text="@string/btn_delete"
                        android:textColor="@color/colorRed900"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>





    </LinearLayout>

</androidx.cardview.widget.CardView>