<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:elevation="4dp"
            app:shape_arc_cropDirection="outside"
            app:shape_arc_height="20dp"
            app:shape_arc_position="bottom"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textViewNameBookingDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RETURN HOME"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_margin="50dp" />

        </com.github.florent37.shapeofview.shapes.ArcView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/email"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputEmail"
                    android:inputType="textEmailAddress">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/password"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                android:layout_marginLeft="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputPassword"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_in"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/colorIcons"
                android:layout_margin="30dp"
                android:textSize="15sp"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/pets"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center|top"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>